<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/heart"
                android:scaleType="fitCenter"
                android:alpha="0.7"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_margin="10dp"
                android:background="@color/quantum_vanillared200"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:checked="false"
                    android:text="You're not Logged In, Please Log In to contribute."/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signin"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:text="Sign Up / Sign In"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/quantum_white_100"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crowd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--DISEASE-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/report_disease"
                    android:textAllCaps="true"/>
                <Spinner
                    android:id="@+id/diseaseSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:minHeight="45dp"
                    android:background="#eee"
                    android:gravity="center_vertical"/>

                <!--AGE GROUP-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/age_group"
                    android:textAllCaps="true"/>
                <Spinner
                    android:id="@+id/ageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#eee"/>


                <!--GENDER-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/gender_of_patient"
                    android:textAllCaps="true"/>
                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:orientation="horizontal"
                    android:background="#eee"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:checked="true"
                        android:layout_height="wrap_content"
                        android:text="@string/male"/>
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/female"/>
                </RadioGroup>

                <!--DATE-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/date_of_report"
                    android:textAllCaps="true"/>

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#eee"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:ems="10"
                    android:focusable="false"
                    android:inputType="date" />

                <!--LOCATION-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/location"
                    android:textAllCaps="true"/>

                <RelativeLayout
                    android:id="@+id/maprel"
                    android:layout_width="match_parent"
                    android:layout_height="400dp">

                    <mit.samaritans.em.utils.CustomMapView
                        android:id="@+id/customMap"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        />

                    <View
                        android:id="@+id/view"
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:layout_centerInParent="true"/>

                    <ImageView
                        android:id="@+id/confirm_address_map_custom_marker"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_above="@+id/view"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/pin"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:layout_margin="10dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/currentBT"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:text="@string/current_location"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveBT"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:text="@string/save_location"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/checkwrap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:background="#eee">

                    <CheckBox
                        android:id="@+id/check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:checked="false"
                        android:text="I CERTIFY ALL INFORMATION IS TRUE AND CORRECT TO THE BEST OF MY KNOWLEDGE."/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />
            </LinearLayout>


            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:weightSum="10"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/minus"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    app:icon="@drawable/add" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:boxBackgroundMode="filled"
                    app:boxStrokeColor="@color/colorAccent"
                    app:boxStrokeWidth="1dp"
                    android:layout_weight="8"
                    android:hint="NUMBER OF CASES">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/noofcases"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/plus"
                    app:icon="@drawable/add"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>-->

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        app:navigationIcon="@drawable/menu"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorAccent"
        app:fabAlignmentMode="center"
        app:fabAnimationMode="slide"
        android:layout_alignParentBottom="true"
        android:layoutMode="opticalBounds"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#fff"
        android:src="@drawable/check"
        app:backgroundTint="#00ffffff"
        app:layout_anchor="@id/bottom_app_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>